--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p>This site was created by Jayson Gomba. It uses data from weather stack and position stack.</p>
             <img src="/img/space.jpg" class="earth">
         </div>
         {{>footer}}
